# why-I-quite-like-Ruby

./: Makefile  README.rst  light16x9.style  light4x3.style  old-notes.rst  pyproject.toml  ruby-slide-notes.rst  ruby-slides.rst  why-i-quite-like-ruby.rst
