[tool.poetry]
name = "ruby-talk"
version = "0.1.0"
description = "Why I like Python, and quite like Ruby"
authors = ["Tibs <tibs@tonyibbs.co.uk>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.6"
rst2pdf = "^0.98"
pygments = "^2.7.3"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
